examples/test/testpolicy3865.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3865
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key24: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value37
          key16: value48
      podSelector:
        matchLabels:
          key27: value3
          key28: value16
          key45: value43
